Mon Apr 23 13:22:31 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_multimin.h diff.c: made starting_point const throughout to
 	avoid compiler warnings

	* made internal functions static

	* gsl_multimin.h: added missing prototype for gsl_multimin_diff

Tue Apr 17 22:15:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_multimin.h: added missing prototype for gsl_multimin_compute_ep

Sun Feb 18 16:35:21 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fdfminimizer.c (gsl_multimin_fdf_minimizer_alloc): modified to
 	account for change in calling convection of
 	gsl_min_fminimizer_alloc

Fri May  5 16:08:34 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_fdf): fixed warning about "control reaches end of
 	non-void function" by changing test_fdf to return type void
 
Tue May  2 19:20:46 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): added return gsl_test_summary() to main, so that
 	test results are returned through the exit status.

Mon Feb 14 13:12:16 2000  Brian Gough  <bjg@network-theory.co.uk>

	* made all internal functions static
